# StronglyTypedSockets

./: .gitignore  CMakeLists.txt  README.md
app/: async_stdin.cpp  async_stdin.h  base_socket.h  client_main.cpp  server_main.cpp  service.cpp  service.h
include/: _.h  af_inet.h  socket_impl.h  utils.h
include/endpoint/: accepted_sock.h  accepted_sock_ref.h  client.h  client_i.h  endpoint.h  event_observer.h  poll_traits.h  proceed_exception.h  proceed_i.h  proto_to_sum_of_states.h  recv_i.h  send_i.h  send_recv_i.h  server.h
include/epoll/: epoll.h  event.h  sock_op.h
include/policy/: accept_policy.h  bind_policy.h  connect_policy.h  listen_policy.h  send_recv_policy.h
include/poll_event/: event.h
include/socket/: get_native_handle.h  in_address.h  proto.h  shutdown_dir.h  sock_op.h  socket.h  socket_impl.h
include/socket_states/: active_socket.h  binded_socket.h  listening_socket.h
include/utils/: address_from_string.h  enum_op.h  lambda_visitor.h  may_be_unused.h  mbind.h  to_string.h
src/: af_inet.cpp  in_address.cpp  proto.cpp  socket.tpp  socket_impl.cpp  utils.cpp
src/endpoint/: client.tpp  endpoint.tpp  event_observer.tpp  proceed_exception.cpp  recv_i.cpp  send_i.cpp  server.tpp
src/epoll/: epoll.cpp
src/socket/: af_inet.cpp  in_address.cpp  proto.cpp  socket.tpp  socket_impl.cpp
src/utils/: address_from_string.cpp  to_string.cpp
test/: client_server_test.cpp  epoll_test.cpp  in_addr_test.cpp  socket_test.cpp
